--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               >terminal</span
             >
             <span class="font-game text-white text-lg tracking-wider"
-              >TheNewbieBackpack</span
+              ><span class="hidden md:inline-block">The</span>NewbieBackpack</span
             >
           </div>
           <div class="hidden md:block">
