--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
 
           <a
             href="/backend_python.pdf"
-            download="Setayesh-Soheili-Resume-EN.pdf"
+            download="backend_python.pdf"
             class="bg-black p-4 rounded border-2 border-neon-green/50 hover:border-neon-green transition-all group block"
           >
             <div class="flex flex-col items-center text-center">
